--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^5.11.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic-selectable": "^3.4.0",
     "ionicons": "3.0.0",
     "rxjs": "6.0.0",
     "rxjs-compat": "6.0.0",
