--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/background-fetch": "^4.20.0",
     "@ionic-native/core": "^4.20.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.2.1",
     "cordova-android": "7.1.4",
+    "cordova-plugin-background-fetch": "5.5.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic": "3.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -62,7 +64,8 @@
         "WARN_DEBUG": "true",
         "UPDATE_API": "https://api.ionicjs.com",
         "MAX_STORE": "2"
-      }
+      },
+      "cordova-plugin-background-fetch": {}
     },
     "platforms": [
       "android"
