--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/app-minimize": "^4.20.0",
     "@ionic-native/background-fetch": "^4.20.0",
     "@ionic-native/core": "^4.20.0",
     "@ionic-native/splash-screen": "4.3.2",
@@ -27,6 +28,7 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.2.1",
     "cordova-android": "7.1.4",
+    "cordova-plugin-appminimize": "1.0.1",
     "cordova-plugin-background-fetch": "5.5.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic": "3.1.2",
@@ -65,7 +67,8 @@
         "UPDATE_API": "https://api.ionicjs.com",
         "MAX_STORE": "2"
       },
-      "cordova-plugin-background-fetch": {}
+      "cordova-plugin-background-fetch": {},
+      "cordova-plugin-appminimize": {}
     },
     "platforms": [
       "android"
