--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/core": "^4.20.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.2.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-appminimize": "1.0.1",
@@ -35,6 +35,7 @@
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sqlite-storage": "3.2.1",
     "cordova-wheel-selector-plugin": "1.1.3",
     "firebase": "^5.11.1",
     "ionic-angular": "3.9.2",
@@ -68,7 +69,8 @@
         "MAX_STORE": "2"
       },
       "cordova-plugin-background-fetch": {},
-      "cordova-plugin-appminimize": {}
+      "cordova-plugin-appminimize": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
