--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.2.1",
     "cordova-android": "7.1.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-appminimize": "1.0.1",
     "cordova-plugin-background-fetch": "5.5.0",
     "cordova-plugin-device": "^1.1.4",
@@ -73,7 +74,8 @@
       "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
