--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.2.1",
-    "cordova-android": "7.1.4",
+    "cordova-android": "^7.1.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-appminimize": "1.0.1",
     "cordova-plugin-background-fetch": "5.5.0",
