--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
+    "build": "ionic-app-scripts build --prod --release",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
@@ -32,7 +32,7 @@
     "cordova-plugin-appminimize": "1.0.1",
     "cordova-plugin-background-fetch": "5.5.0",
     "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-ionic": "3.1.2",
+    "cordova-plugin-ionic": "^3.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
