--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "MIN_BACKGROUND_DURATION": "10",
         "CHANNEL_NAME": "Production",
         "APP_ID": "98b060c0",
-        "UPDATE_METHOD": "background",
+        "UPDATE_METHOD": "none",
         "WARN_DEBUG": "true",
         "UPDATE_API": "https://api.ionicjs.com",
         "MAX_STORE": "2"
