--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic": {
-        "CHANNEL_NAME": "Beta",
-        "UPDATE_METHOD": "background",
+        "CHANNEL_NAME": "Production",
+        "UPDATE_METHOD": "none",
         "MIN_BACKGROUND_DURATION": "10",
         "APP_ID": "98b060c0",
         "WARN_DEBUG": "true",
