--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
+    "@ionic/lab": "2.0.16",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
